--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <div class="main">
       <!-- Challenge 3: Add the image of webicons.png-->
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Flag_of_Canada_%28Pantone%29.svg/1200px-Flag_of_Canada_%28Pantone%29.svg.png" style="height:650px; width: 1300px;">
-      <!-- Challenge 4: Using inline styling, resize the above image appropriately -->
-      <!-- Challenge 5: Write a paragraph describing web development.  Discuss the purpose of HTML, CSS and JavaScript -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Toronto_-_ON_-_Toronto_Harbourfront7.jpg" style="height:650px; width: 550px;"
+      
       
     </div>
     <div class="paragraph">
