--- a/games.html
+++ b/games.html
@@ -35,19 +35,20 @@
     <h1>Video Games</h1> 
     </div>
 
-    <div class="main">
-      <img src="https://upload.wikimedia.org/wikipedia/en/5/52/Assassin%27s_Creed.jpg" style="height:400px; width: 600px;">
-      <img src="https://upload.wikimedia.org/wikipedia/en/9/97/Mass_Effect_Legendary_Edition.jpeg" style="height:400px; width:600px;">
-      <img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Cuphead_%28artwork%29.png" style="height:400px; width:650px;">
-      
-    <div class="paragraph">
-    <h2>Assasins Creed, Originally released in 2007. Developed my Ubisoft Montreal in Canada. Over 2.5 million copies sold and a huge franchise still in the gaming industry to this day. Sold over 200 million copies if you combine all the games</h2>
-    <h2>Mass Effect, Originally released in 2007. Developed by BioWare which is a studio in Canada. 1.6 million copies Sold within its first six weeks. Has sold over 20 million copies if you combine all the games in the franchise</h2>
-    <h2>Cuphead, Originally released in 2017. Developed by independant gaming studio Studio MDHR. Over 6 million copies sold and is known as one of the hardest games of all time.</h2>
+    <div id="main" class="container">
+      <div><img src="https://upload.wikimedia.org/wikipedia/en/5/52/Assassin%27s_Creed.jpg"></div>
+      <div><img src="https://upload.wikimedia.org/wikipedia/en/9/97/Mass_Effect_Legendary_Edition.jpeg"></div>
+      <div><img src="https://upload.wikimedia.org/wikipedia/en/e/eb/Cuphead_%28artwork%29.png"></div>
+    </div>
+    
+    <div id="main2" class="container">
+      <div><h2>Assasins Creed, Originally released in 2007. Developed by Ubisoft Montreal in Canada. Over 2.5 million copies sold and a huge franchise still in the gaming industry to this day. Sold over 200 million copies if you combine all the games</h2></div>
+      <div><h2>Mass Effect, Originally released in 2007. Developed by BioWare which is a studio in Canada. 1.6 million copies Sold within its first six weeks. Has sold over 20 million copies if you combine all the games in the franchise</h2></div>
+      <div><h2>Cuphead, Originally released in 2017. Developed by independant gaming studio Studio MDHR. Over 6 million copies sold, has won many awards and is known as one of the hardest games of all time</h2></div>
     </div>
 
     <div id="footer" class="banner">
-    <p>Made By Ethan Borrero (Web Development)</p>
+    <h2>Made By Ethan Borrero (Web Development)</h2>
     </div>
   </body>
 </html>
