--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
 
     <div id="footer" class="banner">
-    <p>Made By Ethan Borrero (Web Development)</p>
+    <h2>Made By Ethan Borrero (Web Development)</h2>
     </div>
   </body>
 </html>
