--- a/facts.html
+++ b/facts.html
@@ -27,7 +27,7 @@
     <!-- Challenge 1: Create the navigation bar in support of the sitemap associated with the website. -->
     <nav class="container" id="links">
         <a href="index.html">Home</a>
-        <a href="facts.html">Fun Facts</a>
+        <a href="games.html">Video Games</a>
         <a href="parks.html">Amusment Parks</a>
     </nav>
     <!-- Challenge 2: Create a banner container with heading of "Web Development".  Give it a class of "banner".-->
